# app-grafana

./: Cargo.toml  README.md  config.yaml
resources/: query.rs  search.rs
schemas/: schema.graphql
src/: lib.rs
